--- a/index.html
+++ b/index.html
@@ -39,8 +39,44 @@
         <section class="features">
             <h2 class="text-uppercase">Features:</h2>
             <div class="feature">
-                <h3>Feature 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h3 class="text-uppercase">Monthly Favourites</h3>
+                <table class="table table table-striped table-dark table-hover">
+                <thead class="thead-dark">
+  <tr>
+     <th scope="col">#</th>
+      <th scope="col">Name</th>
+      <th scope="col">Origin</th>
+  </tr>
+          <caption>Top 5 whiskeys of the month</caption>      
+                </thead>
+                <tbody>
+  <tr>
+    <td>1</td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td></td>
+    <td></td>
+  </tr>
+   <tr>
+    <td>3</td>
+    <td></td>
+    <td></td>
+  </tr>
+     <tr>
+    <td>4</td>
+    <td></td>
+    <td></td>
+  </tr>
+     <tr>
+    <td>5</td>
+    <td></td>
+    <td></td>
+  </tr>
+                </tbody>
+</table>
                 <p><a class="btn btn-sm btn-default" href="">Read More</a></p>
             </div>
             <div class="feature">
@@ -52,6 +88,7 @@
                 <h3>Feature 3</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <p><a class="btn btn-sm btn-default" href="">Read More</a></p>
+                
             </div>
         </section>
         <!-- /.features -->
