updated table info.

--- a/index.html
+++ b/index.html
@@ -68,32 +68,32 @@
                 <tbody>
   <tr>
     <td>1</td>
-    <td></td>
-    <td></td>
+    <td>Glenmorangie 25 Year-Old</td>
+    <td>Scotland</td>
   </tr>
   <tr>
     <td>2</td>
-    <td></td>
-    <td></td>
+    <td>Penderyn Peated Malt</td>
+    <td>Wales</td>
   </tr>
    <tr>
     <td>3</td>
-    <td></td>
-    <td></td>
+    <td>Aberlour Casg Annamh</td>
+    <td>Scotland</td>
   </tr>
      <tr>
     <td>4</td>
-    <td></td>
-    <td></td>
+    <td>Yamazaki 12 Year Old </td>
+    <td>Japan</td>
   </tr>
      <tr>
     <td>5</td>
-    <td></td>
-    <td></td>
+    <td>Teeling Single Grain Irish Whiskey</td>
+    <td>Eire</td>
   </tr>
                 </tbody>
 </table>
-   <h2 class="text-center small mark">Top 5 whiskeys of the month</h2>
+   <h3 class="text-center small mark" >Top 5 whiskeys of the month</h3>
                 </div>
                
                 <div class="col-12 col-md-6 col-lg-4">
