--- a/index.html
+++ b/index.html
@@ -11,11 +11,25 @@
   </head>
 
   <body>
-    <article class="container">
+    <!--Nav-->
+    <nav class="navbar navbar-light navbar-expand-sm bg-light">
+        <a href="/" class="navbar-brand">
+                    Whiskey Drop</a>
+        <ul class="navbar-nav mr-auto">
+            <li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
+            <li class="nav-item mr-2"><a class="nav-link" href="">About</a></li>
+            <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="">Sign In / Sign Up</a></li>
+        </ul>
+    </nav>
+        <div class="d-none d-md-block">
+            <p class="navbar-text my-auto mr-2"><i>Great whiskey delivered to your door</i></p>
+            <a href="/login">Sign In / Sign Up</a>
+        </div>
+    <article class="container mt-3">
       <!-- Callout -->
       <div class="row">
         <div class="col-12">
-          <section class="callout">
+          <section class="callout jumbotron">
             <h1>The finest whiskeys delivered to your doorstep.</h1>
             <p class="lead">
               Sign up today to start receiving the world's best whiskeys every
@@ -70,7 +84,7 @@
       <!-- Features -->
       <section class="feature">
         <div class="row">
-          <div class="col-12 ">
+          <div class="col-12">
             <h2 class="text-uppercase">Features:</h2>
           </div>
         </div>
